--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "nanoid": "^4.0.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-mde": "^11.5.0",
-    "react-split": "^2.0.14",
-    "showdown": "^2.1.0"
+    "nanoid": "3.1.28",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-mde": "11.5.0",
+    "react-split": "2.0.13",
+    "showdown": "1.9.1"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2",
     "@vitejs/plugin-react": "^3.1.0",
     "vite": "^4.2.0"
   }
